--- a/package.json
+++ b/package.json
@@ -28,18 +28,18 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.3.1",
-    "@tailwindcss/postcss": "^4.1.5",
+    "@tailwindcss/postcss": "4.1.5",
     "@types/node": "22.15.17",
     "@types/react": "19.1.3",
     "@types/react-dom": "19.1.3",
     "eslint": "9.26.0",
     "eslint-config-next": "15.3.2",
     "eslint-config-prettier": "10.1.5",
-    "postcss": "^8.5.3",
+    "postcss": "8.5.3",
     "prettier": "3.5.3",
     "prisma": "6.7.0",
-    "tailwindcss": "^4.1.5",
-    "tw-animate-css": "^1.2.9",
+    "tailwindcss": "4.1.5",
+    "tw-animate-css": "1.2.9",
     "typescript": "5.8.3"
   },
   "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
