--- a/.github/workflows/container-scan.yml
+++ b/.github/workflows/container-scan.yml
@@ -41,3 +41,10 @@ jobs:
         uses: forgejo/upload-artifact@v4
         with:
           path: trivy-report.json
+
+      - name: Clean up Docker
+        run: |
+          docker system prune -af
+          docker volume prune -f
+          docker network prune -f
+          docker builder prune -af
