--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -12,6 +12,8 @@ on:
 jobs:
   docker:
     runs-on: docker
+    container:
+      image: ghcr.io/di0ik/forgejo_runner_container:main
     steps:
       - name: Login to Docker Hub
         uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3
