--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "next-auth": "^5.0.0-beta.25",
     "next-swagger-doc": "^0.4.1",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
+    "react-calendar": "^5.1.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
