--- a/package.json
+++ b/package.json
@@ -47,13 +47,13 @@
     "@types/node": "22.15.19",
     "@types/react": "19.1.4",
     "@types/react-dom": "19.1.5",
-    "dotenv-cli": "^8.0.0",
-    "eslint": "9.27.0",
+    "dotenv-cli": "8.0.0",
+    "eslint": "9.26.0",
     "eslint-config-next": "15.3.2",
     "eslint-config-prettier": "10.1.5",
     "postcss": "8.5.3",
     "prettier": "3.5.3",
-    "prisma": "^6.7.0",
+    "prisma": "6.7.0",
     "tailwindcss": "4.1.6",
     "tw-animate-css": "1.2.9",
     "typescript": "5.8.3"
