--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "next-swagger-doc": "^0.4.1",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
-    "react-calendar": "^5.1.0",
+    "react-big-calendar": "^1.18.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
@@ -71,6 +71,7 @@
     "@tailwindcss/postcss": "4.1.10",
     "@types/node": "22.15.33",
     "@types/react": "19.1.8",
+    "@types/react-big-calendar": "^1",
     "@types/react-dom": "19.1.6",
     "@types/swagger-ui-react": "5",
     "@types/webpack-env": "1.18.8",
