--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*
 !.env.example
+!.env.test
 
 # vercel
 .vercel
@@ -45,3 +46,8 @@ next-env.d.ts
 /prisma/*.db*
 src/generated/*
 data
+
+# cypress
+cypress/videos
+cypress/screenshots
+cypress/coverage
