--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     ],
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "types": ["node", "cypress", "@types/webpack-env"]
   },
   "ts-node": {
     "compilerOptions": {
