--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,23 @@ AUTH_AUTHENTIK_ID=
 AUTH_AUTHENTIK_SECRET=
 AUTH_AUTHENTIK_ISSUER=
 
+AUTH_DISCORD_ID=
+AUTH_DISCORD_SECRET=
+
+AUTH_FACEBOOK_ID=
+AUTH_FACEBOOK_SECRET=
+
+AUTH_GITHUB_ID=
+AUTH_GITHUB_SECRET=
+
+AUTH_GITLAB_ID=
+AUTH_GITLAB_SECRET=
+
+AUTH_GOOGLE_ID=
+AUTH_GOOGLE_SECRET=
+
+AUTH_KEYCLOAK_ID=
+AUTH_KEYCLOAK_SECRET=
+AUTH_KEYCLOAK_ISSUER=
+
 NEXT_PUBLIC_APP_URL=
